--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bd9462">  <td>17/03/09 14:45:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountSignUpWithGoogle.NewAccountSignup()[pri:0, instance:com.playphone.msportsUI.AccountSignUpWithGoogle@56ac3a89]">NewAccountSignup</td> 
+<tr bgcolor="bd9462">  <td>17/03/09 15:50:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageSupportContactUs.SupportContactUs()[pri:0, instance:com.playphone.msportsUI.HomePageSupportContactUs@56ac3a89]">SupportContactUs</td> 
   <td>main@1604125387</td>   <td></td> </tr>
-<tr bgcolor="bd9462">  <td>17/03/09 14:46:12</td>   <td>34585</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AccountSignUpWithGoogle.tearDown()[pri:0, instance:com.playphone.msportsUI.AccountSignUpWithGoogle@56ac3a89]">&lt;&lt;tearDown</td> 
+<tr bgcolor="bd9462">  <td>17/03/09 15:50:23</td>   <td>12303</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageSupportContactUs.tearDown()[pri:0, instance:com.playphone.msportsUI.HomePageSupportContactUs@56ac3a89]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
-<tr bgcolor="bd9462">  <td>17/03/09 14:45:28</td>   <td>-9948</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountSignUpWithGoogle.ti()[pri:0, instance:com.playphone.msportsUI.AccountSignUpWithGoogle@56ac3a89]">&gt;&gt;ti</td> 
+<tr bgcolor="bd9462">  <td>17/03/09 15:49:59</td>   <td>-11813</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageSupportContactUs.ti()[pri:0, instance:com.playphone.msportsUI.HomePageSupportContactUs@56ac3a89]">&gt;&gt;ti</td> 
 <td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
 </table>
