--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,34 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bd9462">  <td>17/03/14 15:25:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountLoginValidUsernamePassword.ti()[pri:0, instance:com.playphone.msportsUI.AccountLoginValidUsernamePassword@59494225]">&gt;&gt;ti</td> 
-<td>&nbsp;</td>  <td>main@1864350231</td>   <td></td> </tr>
-<tr bgcolor="bd9462">  <td>17/03/14 15:25:36</td>   <td>9948</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountLoginValidUsernamePassword.TestValidLogin()[pri:0, instance:com.playphone.msportsUI.AccountLoginValidUsernamePassword@59494225]">TestValidLogin</td> 
-  <td>main@1864350231</td>   <td></td> </tr>
-<tr bgcolor="bd9462">  <td>17/03/14 15:26:02</td>   <td>35963</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AccountLoginValidUsernamePassword.tearDown()[pri:0, instance:com.playphone.msportsUI.AccountLoginValidUsernamePassword@59494225]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1864350231</td>   <td></td> </tr>
-<tr bgcolor="b6bec2">  <td>17/03/14 15:26:03</td>   <td>36250</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountLogout.ti()[pri:0, instance:com.playphone.msportsUI.AccountLogout@6e1567f1]">&gt;&gt;ti</td> 
-<td>&nbsp;</td>  <td>main@1864350231</td>   <td></td> </tr>
-<tr bgcolor="b6bec2">  <td>17/03/14 15:26:13</td>   <td>46683</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountLogout.TestValidLogin()[pri:0, instance:com.playphone.msportsUI.AccountLogout@6e1567f1]">TestValidLogin</td> 
-  <td>main@1864350231</td>   <td></td> </tr>
-<tr bgcolor="b6bec2">  <td>17/03/14 15:26:51</td>   <td>84746</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AccountLogout.tearDown()[pri:0, instance:com.playphone.msportsUI.AccountLogout@6e1567f1]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1864350231</td>   <td></td> </tr>
-<tr bgcolor="8f8f71">  <td>17/03/14 15:26:51</td>   <td>84993</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountSignup.ti()[pri:0, instance:com.playphone.msportsUI.AccountSignup@5cb9f472]">&gt;&gt;ti</td> 
-<td>&nbsp;</td>  <td>main@1864350231</td>   <td></td> </tr>
-<tr bgcolor="8f8f71">  <td>17/03/14 15:27:04</td>   <td>97199</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountSignup.NewAccountSignup()[pri:0, instance:com.playphone.msportsUI.AccountSignup@5cb9f472]">NewAccountSignup</td> 
-  <td>main@1864350231</td>   <td></td> </tr>
-<tr bgcolor="8f8f71">  <td>17/03/14 15:28:01</td>   <td>154927</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AccountSignup.tearDown()[pri:0, instance:com.playphone.msportsUI.AccountSignup@5cb9f472]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1864350231</td>   <td></td> </tr>
-<tr bgcolor="93948d">  <td>17/03/14 15:28:02</td>   <td>155194</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountLoginPasswordNegative.ti()[pri:0, instance:com.playphone.msportsUI.AccountLoginPasswordNegative@cb644e]">&gt;&gt;ti</td> 
-<td>&nbsp;</td>  <td>main@1864350231</td>   <td></td> </tr>
-<tr bgcolor="93948d">  <td>17/03/14 15:28:14</td>   <td>168099</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountLoginPasswordNegative.TestInvalidPassword()[pri:0, instance:com.playphone.msportsUI.AccountLoginPasswordNegative@cb644e]">TestInvalidPassword</td> 
-  <td>main@1864350231</td>   <td></td> </tr>
-<tr bgcolor="93948d">  <td>17/03/14 15:28:37</td>   <td>190263</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AccountLoginPasswordNegative.tearDown()[pri:0, instance:com.playphone.msportsUI.AccountLoginPasswordNegative@cb644e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1864350231</td>   <td></td> </tr>
-<tr bgcolor="60af79">  <td>17/03/14 15:28:37</td>   <td>190535</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountLoginUsernameNegative.ti()[pri:0, instance:com.playphone.msportsUI.AccountLoginUsernameNegative@13805618]">&gt;&gt;ti</td> 
-<td>&nbsp;</td>  <td>main@1864350231</td>   <td></td> </tr>
-<tr bgcolor="60af79">  <td>17/03/14 15:28:46</td>   <td>199688</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountLoginUsernameNegative.TestInvalidUsername()[pri:0, instance:com.playphone.msportsUI.AccountLoginUsernameNegative@13805618]">TestInvalidUsername</td> 
-  <td>main@1864350231</td>   <td></td> </tr>
-<tr bgcolor="60af79">  <td>17/03/14 15:29:08</td>   <td>221258</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AccountLoginUsernameNegative.tearDown()[pri:0, instance:com.playphone.msportsUI.AccountLoginUsernameNegative@13805618]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1864350231</td>   <td></td> </tr>
+<tr bgcolor="bd9462">  <td>17/03/16 15:37:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageBottomSignup.ti()[pri:0, instance:com.playphone.msportsUI.HomePageBottomSignup@56ac3a89]">&gt;&gt;ti</td> 
+<td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
+<tr bgcolor="bd9462">  <td>17/03/16 15:37:20</td>   <td>18450</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageBottomSignup.NewAccountSignup()[pri:0, instance:com.playphone.msportsUI.HomePageBottomSignup@56ac3a89]">NewAccountSignup</td> 
+  <td>main@1604125387</td>   <td></td> </tr>
+<tr bgcolor="bd9462">  <td>17/03/16 15:38:31</td>   <td>89458</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageBottomSignup.tearDown()[pri:0, instance:com.playphone.msportsUI.HomePageBottomSignup@56ac3a89]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
 </table>
