--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bd9462">  <td>17/03/16 15:37:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageBottomSignup.NewAccountSignup()[pri:0, instance:com.playphone.msportsUI.HomePageBottomSignup@56ac3a89]">NewAccountSignup</td> 
+<tr bgcolor="bd9462">  <td>17/03/16 16:08:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountSignUpWithFacebook.NewAccountSignup()[pri:0, instance:com.playphone.msportsUI.AccountSignUpWithFacebook@56ac3a89]">NewAccountSignup</td> 
   <td>main@1604125387</td>   <td></td> </tr>
-<tr bgcolor="bd9462">  <td>17/03/16 15:38:31</td>   <td>71008</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageBottomSignup.tearDown()[pri:0, instance:com.playphone.msportsUI.HomePageBottomSignup@56ac3a89]">&lt;&lt;tearDown</td> 
+<tr bgcolor="bd9462">  <td>17/03/16 16:09:13</td>   <td>46592</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AccountSignUpWithFacebook.tearDown()[pri:0, instance:com.playphone.msportsUI.AccountSignUpWithFacebook@56ac3a89]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
-<tr bgcolor="bd9462">  <td>17/03/16 15:37:02</td>   <td>-18450</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageBottomSignup.ti()[pri:0, instance:com.playphone.msportsUI.HomePageBottomSignup@56ac3a89]">&gt;&gt;ti</td> 
+<tr bgcolor="bd9462">  <td>17/03/16 16:08:17</td>   <td>-9484</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountSignUpWithFacebook.ti()[pri:0, instance:com.playphone.msportsUI.AccountSignUpWithFacebook@56ac3a89]">&gt;&gt;ti</td> 
 <td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
 </table>
